--- a/index.html
+++ b/index.html
@@ -34,44 +34,48 @@
 
         <section class="coming-soon">
             <h1>Coming Soon</h1>
-            <ul>
-                <li>Oppo f19</li>
-                <li>Oppo f19</li>
-                <li>Oppo f19</li>
-                <li>Oppo f19</li>
-            </ul>
+            <div>
+                <p>Oppo f19</p>
+                <p>Oppo f19</p>
+                <p>Oppo f19</p>
+                <p>Oppo f19</p>
+            </div>
         </section>
 
         <section class="brands">
+            <h1>Brands</h1>
             <div>
-                <h1>Brands</h1>
-                <ul>
-                    <li>Samsung</li>
-                    <li>Apple</li>
-                    <li>Huawei</li>
-                    <li>Nokia</li>
-                    <li>Oppo</li>
-                    <li>Xiaomi</li>
-                    <li>Infinix</li>
-                    <li>More</li>
-                </ul>
+                <p>Samsung</p>
+                <p>Apple</p>
+                <p>Huawei</p>
+                <p>Nokia</p>
+                <p>Oppo</p>
+                <p>Xiaomi</p>
+                <p>Infinix</p>
+                <p>More</p>
             </div>    
         </section>
 
-        <section class="Contact Us">
+        <section class="contact-us">
             <h1>Contact Us</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta dignissimos ipsam, officiis, quae incidunt nesciunt, enim debitis optio harum cupiditate quam aliquam deleniti modi? Quae tenetur quisquam consectetur eligendi deserunt!</p>
         </section>
 
         <section class="disclaimer">
             <h1>Disclaimer</h1>
-            <p>Mobile Phone Prices / price list is updated daily from local Mobile shops & Mobile dealers in Pakistan but we can't guarantee that mobile prices / price list on this page is 100% correct 
-                (Human error is possible). Always visit your local shop for exact mobile prices. 
-                What Mobile Pakistan - Nokia mobile prices / LG mobile prices / Samsung mobile prices / Sony Ericsson mobile prices / HTC mobile prices - What Mobile Prices in Pakistan
-            </p>
+            <div>
+                <p>Mobile Phone Prices / price list is updated daily from local Mobile shops & Mobile dealers in Pakistan but we can't guarantee that mobile prices / price list on this page is 100% correct 
+                    (Human error is possible). Always visit your local shop for exact mobile prices. 
+                    What Mobile Pakistan - Nokia mobile prices / LG mobile prices / Samsung mobile prices / Sony Ericsson mobile prices / HTC mobile prices - What Mobile Prices in Pakistan
+                </p>
+            </div>
         </section>
 
         <footer>
-            <p> Copyright © 2021 www.whatmobile.com.pk. What Mobile Pakistan All Rights Reserved.</p>
+            <div class="footer">
+                <p> Copyright © 2021 www.whatmobile.com.pk. What Mobile Pakistan All Rights Reserved.</p>
+                <p>Designed by Ahmed Shabbir</p>
+            </div>
         </footer>
     </div>
 </body>
