--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </div>
             <nav>
                 <ul>
-                    <li>Mobile Phones</li>
-                    <li>News</li>
-                    <li>Reviews</li>
-                    <li>Outlets</li>
-                    <li>Contact Us</li>
+                    <li><a href="">Mobile Phones</a></li>
+                    <li><a href="">News</a></li>
+                    <li><a href="">Reviews</a></li>
+                    <li><a href="">Outlets</a></li>
+                    <li><a href="">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -36,11 +36,13 @@
             <h1>Coming Soon</h1>
             <div>
                 <p>Oppo f19</p>
-                <p>Oppo f19</p>
-                <p>Oppo f19</p>
-                <p>Oppo f19</p>
+                <p>Oppo f19 Pro</p>
+                <p>Oppo f19 Pro Plus</p>
+                <p>Samsung Galaxy A52</p>
             </div>
         </section>
+
+        <hr />
 
         <section class="brands">
             <h1>Brands</h1>
@@ -56,10 +58,14 @@
             </div>    
         </section>
 
+        <hr />
+
         <section class="contact-us">
             <h1>Contact Us</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta dignissimos ipsam, officiis, quae incidunt nesciunt, enim debitis optio harum cupiditate quam aliquam deleniti modi? Quae tenetur quisquam consectetur eligendi deserunt!</p>
         </section>
+
+        <hr />
 
         <section class="disclaimer">
             <h1>Disclaimer</h1>
